# cpp-raylib-SpaceInvaders

./: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
src/: bullet.cpp  bullet.hpp  bulletsManager.cpp  bulletsManager.hpp  colorHelper.cpp  colorHelper.hpp  enemiesManager.cpp  enemiesManager.hpp  enemy.cpp  enemy.hpp  enums.hpp  explosionFX.cpp  explosionFX.hpp  game.cpp  game.hpp  main.cpp  obstacle.cpp  obstacle.hpp  player.cpp  player.hpp  ship.cpp  ship.hpp  texturesManager.cpp  texturesManager.hpp
